# sand_simulation

./: Cargo.toml
src/: main.rs  sand.rs  world.rs
