[package]
name = "sand_simulation"
version = "0.1.0"
authors = ["pegasis <admin@pegasis.site>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1

[dependencies]
macroquad = "0.3.0-alpha.9"
threadpool = "1.8.1"
